k8s/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-web
spec:
  backend:
    serviceName: web
    servicePort: 3000
